# euklid

./: .gitignore  .travis.yml  BUILD.bazel  NOTICE  README.md  WORKSPACE  build.gradle  pom-js.xml  pom-jvm.xml  pom.xml  settings.gradle
euklid-js/: build.gradle
euklid-jvm/: build.gradle
gradle/wrapper/: gradle-wrapper.properties
js/: index.html  pom.xml
pythagoras-kt-js/: build.gradle
pythagoras-kt-jvm/: build.gradle
src/main/kotlin-js/java/lang/: Math.kt  System.kt
src/main/kotlin-js/java/util/: Random.kt
src/main/kotlin/euklid/f/: AbstractArc.kt  AbstractRectangularShape.kt  AbstractTransform.kt  AffineTransform.kt  Arc.kt  Area.kt  Box.kt  Circle.kt  Crossing.kt  CrossingHelper.kt  CubicCurve.kt  CubicCurves.kt  CurveCrossingHelper.kt  Dimension.kt  Dimensions.kt  Ellipse.kt  FlatteningPathIterator.kt  Frustum.kt  GeometryUtil.kt  IArc.kt  IBox.kt  ICircle.kt  ICubicCurve.kt  IDimension.kt  IEllipse.kt  ILine.kt  IMatrix3.kt  IMatrix4.kt  IPlane.kt  IPoint.kt  IQuadCurve.kt  IQuaternion.kt  IRay2.kt  IRay3.kt  IRectangle.kt  IRectangularShape.kt  IRoundRectangle.kt  IShape.kt  IVector.kt  IVector3.kt  (+30 more)
src/main/kotlin/euklid/i/: Dimension.kt  Dimensions.kt  IDimension.kt  IPoint.kt  IRectangle.kt  IShape.kt  MathUtil.kt  Point.kt  Points.kt  Rectangle.kt  Rectangles.kt  package-info.kt
src/main/kotlin/euklid/platform/: Platform.kt
src/main/kotlin/euklid/util/: NoninvertibleTransformException.kt  SingularMatrixException.kt
src/test/kotlin/euklid/: TestUtils.kt
src/test/kotlin/pythagoras/: FullTestSuite.kt  TestUtils.kt
(+118 files in other folders)
