load("@org_pubref_rules_kotlin//kotlin:rules.bzl", "kotlin_library", "kotlin_test")

# Make everything public while issue https://github.com/pubref/rules_kotlin/issues/27 is unresolved
package(default_visibility = ["//visibility:public"])

kotlin_library(
    name = "pythagoras_kt",
    visibility = ["//visibility:public"],
    srcs = glob(["src/main/kotlin/**/*.kt"]),
)

kotlin_test(
    name = "pythagoras_kt_test",
    visibility = ["//visibility:private"],
    test_class = "pythagoras.FullTestSuite",
    srcs = glob(["src/test/kotlin/**/*.kt"]),
    size = "small",
    deps = [
        ":pythagoras_kt",
    ],
    java_deps = [
        "@junit4//jar",
    ],
)
